    - remove 'deprecated' from Description filed in journal.pc;
    - use systemd/sd-messages.h include instead of sd-messages.h;
    - use systemd/sd-daemon.h include instead of sd-daemon.h;
    - remove unused includes in journald;
    - use sd-journal.h include instead of systemd/sd-journal.h;
    - don't print systemd features;
    - move journal man pages to separate module journal;
 
   systemd (214.2)
~~~~~~~
 * fix quote udev rule;
 * journalctl:
    - remove qrencode support;
 * journal:
    - rename libsystemd-journal.pc to journal.pc;
    - use name journal instead of systemd in journal.pc;
    - rename libsystemd-journal.sym to journal.sym;
    - use abi prefix JOURNAL instead of LIBSYSTEMD_JOURNAL in journal.sym;
    - rename unit systemd-journald.socket to journald.socket;
    - rename unit systemd-journald.service to journald.service;
    - rename systemd-journald to journald;
    - rename system group systemd-journal to journal;
    - rename unit systemd-journal-flush.service to journal-flush.service;
    - rename library libsystemd-journal.so to journal.so;
    - rename man systemd.journal-fields to journal-fields;
    - rename kernel parameters systemd.journald.* to journald.*;
 * remove systemd-journal-remote program;
 * remove systemd-journal-gatewayd program, service and socket;
 * remove gnutls support;
 * remove microhttpd support;
 * remove journal catalog support;
 * ansi color:
    - change color status messages for jobs in progress state;
    - use light red color instead of highlight red;
    - use light green color instead of highlight green;
    - use light blue color instead of highlight blue;
    - use light yellow color instead of highlight yellow;
 * change ansi color status messages for jobs in progress state;
 * remove gcrypt support;
 * remove python support;
 * add /etc/default/locale;
 
   systemd (214.1)
~~~~~~~
        * docs:
             (+) remove gtk-doc build;
             (+) remove sysvinit README;