@@ -12,6 +12,7 @@ systemd System and Service Manager
     - use sd-journal.h include instead of systemd/sd-journal.h;
     - don't print systemd features;
     - move journal man pages to separate module journal;
+    - move journal.pc to separate module journal;
  
    systemd (214.2)
 ~~~~~~~
